--- a/pasha html:css/task3/task 3.6/css/style.css
+++ b/pasha html:css/task3/task 3.6/css/style.css
@@ -8,8 +8,7 @@ table {
     margin-left: 20%;
     margin-top: 5%;
     border-radius: 2%;
-    width: 900px;
-    height: 600px;
+
     border-collapse: collapse;
     border: 2px solid grey;
 }
@@ -51,8 +50,9 @@ td {
     font-size: 20px;
 }
 
-td {
-    width: 100px;
+td,th {
+    width: 80px;
+    height: 80px;
 }
 
 td:nth-child(6) {
