--- a/pasha html:css/task3/task3.4/css/style.css
+++ b/pasha html:css/task3/task3.4/css/style.css
@@ -1,34 +1,14 @@
-caption {
-    text-align: center;
-    font-size: 30px;
-    font-weight: 500;
-}
-
 table {
-    width: 750px;
-    height: 450px;
     border-collapse: collapse;
-    margin-left: 15%;
-    margin-top: 5%;
-    border: 2px solid black;
+    border-spacing: 0;
+    border: 1px solid black;
 }
 
-.left {
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
+td {
+    width: 100px;
+    height: 100px;
 }
 
-.right {
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
-}
-
-.center {
-    border-top: 2px solid black;
-    border-left: 2px solid black;
-    border-right: 2px solid black;
-}
-
-.bottom {
-    border-bottom: 2px solid black;
+tr:nth-child(2) td:nth-child(2) {
+    border: 1px solid black;
 }
