--- a/pasha html:css/task3/task3.5/css/style.css
+++ b/pasha html:css/task3/task3.5/css/style.css
@@ -1,22 +1,15 @@
-caption {
-    text-align: center;
-    font-size: 30px;
-    font-weight: 500;
-}
-
 table {
-    margin-left: 20%;
-    margin-top: 5%;
-    width: 700px;
-    height: 450px;
+    border: 1px solid black;
     border-collapse: collapse;
-    border: 2px solid black;
+    border-spacing: 0;
 }
 
 td {
-    border: 2px solid black;
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
 }
-
-.bottom {
-    border-bottom: 2px solid white;
+tr:nth-child(2) td:nth-child(2) {
+    height: 200px;
+    width: 200px;
 }
